Updated to Ubuntu 16.04, Java 8, Tomcat 8 and GeoServer 2.9.0