@@ -15,9 +15,9 @@ Prerrequisitos
 Hardware y SO
 -------------
 
-* Sistema Operativo: Recomendado Ubuntu 14.04 Server 64 bits
-* CPU: 2 cores mínimo, 4 cores recomendado
-* RAM: 2 GB mínimo, 4 GB recomendado
+* Sistema Operativo: Recomendado Ubuntu 16.04 Server 64 bits
+* CPU: 2-4 cores
+* RAM: 1-2 GB
 * Disco: Según cantidad de datos a publicar (contar con la caché de teselas)
 
 
@@ -53,7 +53,7 @@ Activar la actualización automática de paquetes::
 
 Algunas utilidades básicas::
 
-	apt-get install vim locate
+	apt-get install locate
 	updatedb
 
 
@@ -62,7 +62,7 @@ Instalar y configurar firewall (iptables)::
 	apt-get install iptables
 
 	iptables -A INPUT -i lo -j ACCEPT
-	iptables -A INPUT -p tcp -m multiport --destination-ports 22,80,5432 -j ACCEPT
+	iptables -A INPUT -p tcp -m multiport --destination-ports 22,80,443,8080,8443,5432 -j ACCEPT # Dejar los que se necesiten
 	iptables -A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
 	iptables -P INPUT DROP
 	iptables -P FORWARD DROP
@@ -114,35 +114,29 @@ Instalar fuentes de Microsoft::
 
 	apt-get install ttf-mscorefonts-installer
 
-Instalar OpenJDK 7 y Tomcat 7::
+Instalar OpenJDK JRE 8 y Tomcat 8::
 
-	apt-get install openjdk-7-jdk
-	apt-get install tomcat7
+	apt-get install openjdk-8-jre
+	apt-get install tomcat8
 
 
 Añadir JAI y JAI-ImageIO nativos::
 
-	cd /usr/lib/jvm/java-7-openjdk-amd64
+	cd /usr/lib/jvm/java-8-openjdk-amd64
 	wget http://download.java.net/media/jai/builds/release/1_1_3/jai-1_1_3-lib-linux-amd64-jdk.bin
 	sh jai-1_1_3-lib-linux-amd64-jdk.bin
 
 	wget http://download.java.net/media/jai-imageio/builds/release/1.1/jai_imageio-1_1-lib-linux-amd64-jdk.bin
 	export _POSIX2_VERSION=199209
 	sh jai_imageio-1_1-lib-linux-amd64-jdk.bin
-	
-Si el comando sh no funciona (error "corrupted file") descomprimir como zip::
 
-	sudo cp jai_imageio-1_1-lib-linux-amd64-jdk.bin jai_imageio-1_1-lib-linux-amd64-jdk.zip
-	sudo unzip jai_imageio-1_1-lib-linux-amd64-jdk.zip
-	sudo cp /usr/lib/jvm/java-7-openjdk-amd64/imageio/jre/lib/amd64/libclib_jiio.so /usr/lib/jvm/java-7-openjdk-amd64/jre/lib/amd64/
-	sudo cp /usr/lib/jvm/java-7-openjdk-amd64/imageio/jre/lib/ext/* /usr/lib/jvm/java-7-openjdk-amd64/jre/lib/ext/
 
 Reiniciar server	
 
-	service tomcat7 restart
+	service tomcat8 restart
 
 
-Instalar GDAL (1.10)::
+Instalar GDAL (1.11)::
 
 	apt-get install gdal-bin
 
@@ -150,20 +144,20 @@ Instalar GDAL (1.10)::
 PostGIS
 =======
 
-Instalar PostgreSQL (9.3) y PostGIS (2.1)::
+Instalar PostgreSQL y PostGIS::
 
 	apt-get install postgresql postgis
-	apt-get install postgresql-9.3-postgis-2.1
+	apt-get install postgresql-9.5-postgis-2.2
 
 
-Habilitar acceso local. En /etc/postgresql/9.3/main/pg_hba.conf::
+Habilitar acceso local. En /etc/postgresql/9.5/main/pg_hba.conf::
 
 	# TYPE  DATABASE        USER            ADDRESS                 METHOD
 	local   all             postgres                                ident
 	local   all             all                                     md5
 	host    all             all             127.0.0.1/32            md5
 
-Y en /etc/postgresql/9.3/main/postgresql.conf, descomentar::
+Y en /etc/postgresql/9.5/main/postgresql.conf, descomentar::
 
     listen_addresses = 'localhost'
 
@@ -191,86 +185,56 @@ Habilitar capacidades "geo" en la base de datos::
 	sudo -u postgres psql -d geodatos -c "CREATE EXTENSION postgis;"
 
 
-PgAdmin III
------------
-
-Para instalar la versión más reciente de pgAdmin en ubuntu, crear el fichero /etc/apt/sources.list.d/pgdg.list con este contenido::
-
-	deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main
-
-Y luego, activar el nuevo repo e instalar pgadmin3 (versión 1.18)::
-
-	wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-	sudo apt-get update
-	sudo apt-get upgrade
-	sudo apt-get install pgadmin3
-
-
-Acceso remoto mediante túnel SSH
---------------------------------
-
-Para el acceso remoto a una BDD, se recomienda usar última versión de pgAdmin (1.18), que tiene la opción de acceder mediante un túnel SSH. Al crear una nueva conexión:
-
-1. Pestaña propiedades:
-    * Nombre: <nombre>
-    * Host: localhost
-    * Port: 5432
-    * Maintenance DB: <base de datos>
-    * Username: <usuario>
-    * Password: (da igual, lo va a preguntar siempre)
-
-2. Pestaña "SSH Tunnel":
-    * Use SSH tunneling: Checked
-    * Tunnel host: nombre de la máquina
-    * Username: usuario de la máquina
-    * Authentication: Usar password. No hace falta escribirlo, lo preguntará cada vez.
-
-
 Acceso remoto abriendo puerto
 -----------------------------
 
 En caso de tener que abrir directamente un puerto (opción menos segura):
 
-  1. En /etc/postgresql/9.3/main/postgresql.conf::
+  1. En /etc/postgresql/9.5/main/postgresql.conf::
 
        listen_addresses = '*' # O mejor, una lista de IPs, si son fijas.
 
-  2. En /etc/postgresql/9.3/main/pg_hba.conf, añadir una línea específica de acceso para una combinación de IP, BDD y usuario determinados (a ser posible, no usar comodines o "all" para el acceso remoto).
+  2. En /etc/postgresql/9.5/main/pg_hba.conf, añadir una línea específica de acceso para una combinación de IP, BDD y usuario determinados (a ser posible, no usar comodines o "all" para el acceso remoto).
 
-Configuración de SSL (https) en tomcat 7
+Configuración de SSL (https) en tomcat 8
 ========================================
 
 1. Autogenerar certificado (para pruebas; usar certificado real en producción)::
 
-	cd /var/lib/tomcat7
+	cd /var/lib/tomcat8
 	keytool -genkey -alias admin -keypass adminpass -keystore certificate.bin -storepass adminpass -keyalg RSA
-	chown tomcat7:tomcat7 certificate.bin
+	chown tomcat8:tomcat8 certificate.bin
 
-2. Añadir (descomentar) el conector SSL en /var/lib/tomcat7/conf/server.xml, asignarle el puerto 443, y redirigir el servicio HTTP de 8080 al puerto 443::
+2. Configurar `/var/lib/tomcat8/conf/server.xml` para usar los puertos 80 y 443::
 
-    <Connector port="8080" protocol="HTTP/1.1"
-        connectionTimeout="20000"
-        URIEncoding="UTF-8"
-        redirectPort="443" />
+    <Connector port="80" protocol="HTTP/1.1"
+               connectionTimeout="20000"
+               URIEncoding="UTF-8"
+               redirectPort="443" />
 
     <Connector port="443" protocol="HTTP/1.1" SSLEnabled="true"
-        maxThreads="150" scheme="https" secure="true"
-        clientAuth="false" sslProtocol="TLS"
-        sslEnabledProtocols="v1.2,TLSv1.1,TLSv1"
-        keystoreFile="certificate.bin" keystorePass="adminpass" />
+               maxThreads="150" scheme="https" secure="true"
+               clientAuth="false" sslProtocol="TLS"
+               sslEnabledProtocols="v1.2,TLSv1.1,TLSv1"
+               keystoreFile="certificate.bin" keystorePass="adminpass" />
 
 3. Permitir a Tomcat usar puertos estándard, por debajo de 1024, usando authbind::
 
-        apt-get install authbind
-        sudo touch /etc/authbind/byport/443
-        sudo chmod 500 /etc/authbind/byport/443
-        sudo chown tomcat7 /etc/authbind/byport/443
+	apt-get install authbind
 
-4. Editar /etc/default/tomcat7 y editar la directiva AUTHBIND::
+	touch /etc/authbind/byport/80
+	chmod 500 /etc/authbind/byport/80
+	chown tomcat8 /etc/authbind/byport/80
+
+	touch /etc/authbind/byport/443
+	chmod 500 /etc/authbind/byport/443
+	chown tomcat8 /etc/authbind/byport/443
+
+4. Editar /etc/default/tomcat8 y editar la directiva AUTHBIND::
 
 	AUTHBIND=yes
 
-5. Forzar el uso de SSL para todas las aplicaciones, inhabilitando el puerto 8080 convencional. Añadir este contenido a /var/lib/tomcat7/conf/web.xml::
+5. Si sólo se quiere usar HTTPS, forzar su uso para todas las aplicaciones, inhabilitando el puerto HTTP. Añadir este contenido a /var/lib/tomcat8/conf/web.xml::
 
     <security-constraint>
         <web-resource-collection>
@@ -284,7 +248,7 @@ Configuración de SSL (https) en tomcat 7
 
 6. Reiniciar tomcat::
 	
-	service tomcat7 restart
+	service tomcat8 restart
 
 
 GeoServer
@@ -293,13 +257,13 @@ GeoServer
 Instalación base
 ----------------
 
-GeoServer 2.6.0 (o "latest stable")::
+GeoServer 2.9.0 (o "latest stable")::
 
-	cd /var/lib/tomcat7/webapps/
-	wget http://sourceforge.net/projects/geoserver/files/GeoServer/2.6.0/geoserver-2.6.0-war.zip
+	cd /var/lib/tomcat8/webapps/
+	wget http://sourceforge.net/projects/geoserver/files/GeoServer/2.9.0/geoserver-2.9.0-war.zip
 	apt-get install unzip
-	unzip geoserver-2.6.0-war.zip
-	rm -rf target/ *.txt geoserver-2.6.0-war.zip
+	unzip geoserver-2.9.0-war.zip
+	rm -rf target/ *.txt geoserver-2.9.0-war.zip
 
 
 Entorno JVM
@@ -307,23 +271,23 @@ Entorno JVM
 
 Mover el GEOSERVER_DATA_DIR fuera de los binarios::
 
-	mv /var/lib/tomcat7/webapps/geoserver/data /var/lib/geoserver_data
-	mkdir /var/lib/geowebcache_data
-	chown tomcat7:tomcat7 /var/lib/geowebcache_data
+	mv /var/lib/tomcat8/webapps/geoserver/data /var/local/geoserver
+	mkdir /var/local/geowebcache
+	chown tomcat8:tomcat8 /var/local/geowebcache
 
 
-Editar el fichero /etc/default/tomcat7 y añadir al final las rutas a Java, los datos, la caché, y parámetros de optimización::
+Editar el fichero /etc/default/tomcat8 y añadir al final las rutas a Java, los datos, la caché, y parámetros de optimización::
 
-	JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64
+	JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 
-	GEOSERVER_DATA_DIR=/var/lib/geoserver_data
-	GEOWEBCACHE_CACHE_DIR=/var/lib/geowebcache_data
+	GEOSERVER_DATA_DIR=/var/local/geoserver
+	GEOWEBCACHE_CACHE_DIR=/var/local/geowebcache
 
-	JAVA_OPTS="-server -Djava.awt.headless=true -Xms1560m -Xmx1560m -XX:PermSize=384m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:NewSize=48m -DGEOSERVER_DATA_DIR=$GEOSERVER_DATA_DIR -DGEOWEBCACHE_CACHE_DIR=$GEOWEBCACHE_CACHE_DIR"
+	JAVA_OPTS="-server -Djava.awt.headless=true -Xms512m -Xmx1536m -XX:+UseConcMarkSweepGC -XX:NewSize=48m -DGEOSERVER_DATA_DIR=$GEOSERVER_DATA_DIR -DGEOWEBCACHE_CACHE_DIR=$GEOWEBCACHE_CACHE_DIR"
 
 Reiniciar tomcat::
 
-	service tomcat7 restart
+	service tomcat8 restart
 
 
 Comprobación entorno
@@ -335,7 +299,7 @@ Entrar a::
 
 En "server status", combrobar que:
   * El Data directory apunta a /var/lib/geoserver_data
-  * La JVM es la instalada (OpenJDK 1.7 64 bits)
+  * La JVM es la instalada (OpenJDK 1.8 64 bits)
   * Native JAI y Native JAI ImageIO están a "true"
 
 
@@ -388,7 +352,7 @@ Descargar el fichero de malla de:
 Copiar el fichero de malla en user_projections::
 
   cp 100800401.gsb /var/lib/geoserver_data/user_projections/
-  chown tomcat7:tomcat7 100800401.gsb
+  chown tomcat8:tomcat8 100800401.gsb
 
 Forzar que se use también para la proyección Google Earth. Crear un fichero en user_projections llamado epsg_operations.properties, con el siguiente contenido::
 
@@ -397,11 +361,11 @@ Forzar que se use también para la proyección Google Earth. Crear un fichero en
 
 Cambiar el owner::
 
-  chown tomcat7:tomcat7 epsg_operations.properties
+  chown tomcat8:tomcat8 epsg_operations.properties
 
 Reiniciar GeoServer::
 
-  service tomcat7 restart
+  service tomcat8 restart
 
 Comprobar que se utiliza la malla para reproyectar entre "EPSG:4230" y "EPSG:4258", y entre "EPSG:4230" y "EPSG:4326".
 
@@ -415,11 +379,11 @@ Añadir soporte para formatos ECW y SID
 
 ::
 
-	cd /var/lib/tomcat7/webapps/geoserver/WEB-INF/lib/
-	wget http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.5-beta/geoserver-2.5-beta-gdal-plugin.zip
-	unzip geoserver-2.5-beta-gdal-plugin.zip
+	cd /var/lib/tomcat8/webapps/geoserver/WEB-INF/lib/
+	wget http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.9.0/geoserver-2.9.0-gdal-plugin.zip
+	unzip geoserver-2.9.0-gdal-plugin.zip
 	rm *.txt *.TXT *.zip
-	chown tomcat7:tomcat7 *.jar
+	chown tomcat8:tomcat8 *.jar
 
 2. Instalar las definiciones CRS (gdal_data)::
 
@@ -437,15 +401,15 @@ Añadir soporte para formatos ECW y SID
 	wget http://demo.geo-solutions.it/share/github/imageio-ext/releases/1.1.X/1.1.8/gdal/linux/gdal192-Ubuntu12-gcc4.6.3-x86_64.tar.gz
 	tar -xvf gdal192-Ubuntu12-gcc4.6.3-x86_64.tar.gz
 
-4. Añadir variables de entorno, a /etc/default/tomcat7::
+4. Añadir variables de entorno, a /etc/default/tomcat8::
 
 	export GDAL_DATA=$GEOSERVER_DATA_DIR/gdal/gdal-data
 	export LD_LIBRARY_PATH=$GEOSERVER_DATA_DIR/gdal/lib
 
 5. Cambiar permisos y reiniciar tomcat::
 
-	chown -R tomcat7:tomcat7 /var/lib/geoserver_data/
-	service tomcat7 restart
+	chown -R tomcat8:tomcat8 /var/lib/geoserver_data/
+	service tomcat8 restart
 
 Se listarán los nuevos formatos al crear un almacén de datos raster.
 
@@ -460,15 +424,15 @@ Extensiones Oficiales
 
 CSS. Simbolizar más fácil que con SLD::
 
-	http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.5-beta/geoserver-2.5-beta-css-plugin.zip
+	http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.9.0/geoserver-2.9.0-css-plugin.zip
 
 Importer. Crear capas de un conjunto de tablas PostGIS o de ficheros ráster sin tener que ir una a una::
 
-	http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.5-beta/geoserver-2.5-beta-importer-plugin.zip
+	http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.9.0/geoserver-2.9.0-importer-plugin.zip
 
 Control Flow. Evita sobresaturar el servidor::
 
-	http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.5-beta/geoserver-2.5-beta-control-flow-plugin.zip
+	http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.9.0/geoserver-2.9.0-control-flow-plugin.zip
 
 	http://docs.geoserver.org/latest/en/user/extensions/controlflow/index.html
 
@@ -478,21 +442,21 @@ LibJPEG Turbo. Acelera salida en JPEG::
 
 	dpkg -i libjpeg-turbo-official_1.3.0_amd64.deb
 
-	Añadir /opt/libjpeg-turbo/lib64 a LD_LIBRARY_PATH en /etc/default/tomcat7.
+	Añadir /opt/libjpeg-turbo/lib64 a LD_LIBRARY_PATH en /etc/default/tomcat8.
 
-	http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.5-beta/geoserver-2.5-beta-libjpeg-turbo-plugin.zip
+	http://sourceforge.net/projects/geoserver/files/GeoServer%20Extensions/2.9.0/geoserver-2.9.0-libjpeg-turbo-plugin.zip
 
 Printing (a partir de GS 2.6.0; si se instala una versión anterior, ver siguiente párrafo "Extensiones community")::
 
-	wget http://sourceforge.net/projects/geoserver/files/GeoServer/2.6.0/extensions/geoserver-2.6.0-printing-plugin.zip
+	wget http://sourceforge.net/projects/geoserver/files/GeoServer/2.9.0/extensions/geoserver-2.9.0-printing-plugin.zip
 	
 	unzip en WEB-INF/lib y cambiar permisos
 	
 Para que se pueda imprimir en diferentes formatos (gif, png, tiff) después de instalar la extensión printing hay que añadir la librería fontbox::
 	
 	sudo wget https://archive.apache.org/dist/pdfbox/1.6.0/fontbox-1.6.0.jar
-	sudo chown tomcat7. fontbox-1.6.0.jar
-	sudo service tomcat7 restart
+	sudo chown tomcat8. fontbox-1.6.0.jar
+	sudo service tomcat8 restart
 	
 
 Extensiones "community"
@@ -506,24 +470,12 @@ No están mantenidas oficialmente, y no forman parte del "build" oficial. Hay qu
 	git clone git@github.com:geoserver/geoserver.git
 	cd geoserver
 	# git tag -l
-	git checkout -b tags/2.5-beta
+	git checkout -b tags/2.9.0
 	cd src/community
 	mvn clean install -PcommunityRelease,proxy -DskipTests
 	mvn assembly:single
-	# Proxy jar generated in: proxy/target/gs-proxy-2.5-beta.jar
-	# Printing extension generated in: target/release/geoserver-2.5-beta-printing-plugin.zip
-
-
-Cómo instalarlas
-................
-
-Proxy: wget en WEB-INF/lib::
-
-	https://dl.dropboxusercontent.com/u/2368219/geoserver/gs-proxy-2.5-beta.jar
-
-Printing: wget y unzip en WEB-INF/lib::
-
-	https://dl.dropboxusercontent.com/u/2368219/geoserver/geoserver-2.1-printing-plugin-parxejat.zip
+	# Proxy jar generated in: proxy/target/gs-proxy-2.9.0.jar
+	# Printing extension generated in: target/release/geoserver-2.9.0-printing-plugin.zip
 
 
 Cómo configurarlas
@@ -693,11 +645,11 @@ por lo que se ha hecho manualmente copiando SLD
 
 4- copiar directorio /graphics en /styles y cambiar permisos::
 
-	sudo chown -R tomcat7. graphics/
+	sudo chown -R tomcat8. graphics/
 	
 5- copiar y pegar carpeta /templates y cambiar permisos::
 
-	sudo chown -R tomcat7. templates/
+	sudo chown -R tomcat8. templates/
 	
 	
 Geoexplorer
@@ -707,6 +659,6 @@ Geoexplorer
 
 2- en Geoexplorer, cambiar GEOEXPLORER_DATA a /var/lib/geoexplorer_data en web.xml y app.proxy.geoserver=http://geoserver.fonts.cat/web/ en build.properties
 
-3- crear archivo .war y subirlo a /var/lib/tomcat7/webapps::
+3- crear archivo .war y subirlo a /var/lib/tomcat8/webapps::
 
 	ant -Dgeoexplorer.data=profiles/ctbb-portal dist
